@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 5, 2009</p>
+      <p>Last Updated: November 11, 2009</p>
     </td>
   </tr>
 </table>
@@ -1603,6 +1603,14 @@ nuttx-0.4.14 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  and write buffering that can be used in any block driver.
 	* include/nuttx/wqueue.h -- Added a generic worker thread that can used to
 	  defer processing from an interrupt to a task.
+	* include/nuttx/sdio.h -- Defines a generic SD/SDIO interface can can be
+	  bound to a MMC/SD driver to provide SDIO-based MMC/SD support.
+	* drivers/mmcsd/mmcsd_sdio.c -- Provides a an SDIO-based MMC/SD driver.
+	* arch/arm/src/stm32/stm32_sdio.c -- Provides an STM32 implementation of
+	  the SDIO interface defined in include/nuttx/sdio.h.
+
+	  NOTE: On initial check-in, mmcsd_sdio.c and stm32_sdio.c are merely
+	  skeleton frameworks for the driver.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
